src/style/custom.css
:root {
    --is-link: ; /* hack needed because of DSFR style */
}

/* ------------------------------------ *\
  ALIGNMENT
\* ------------------------------------ */


a.ds-fr--inline {
    display: inline;
}

a.ds-fr--flex {
    display: flex;
}

.ds-fr--inline-block {
    display: inline-block;
}

.ds-fr--v-top {
    vertical-align: text-top;
}

span.ds-fr--v-middle {
    vertical-align: middle;
}

.span.ds-fr--v-middle {
    vertical-align: sub;
}

/*
Fix DSFR issue 
https://gouvfr.atlassian.net/servicedesk/customer/portal/1/DSFR-322
*/
.fr-tabs__panel:not(.fr-tabs__panel--selected) {
    display: none;
}

span.error {
    color: var(--error);
}

.fr-table thead th {
    line-height: 30px;
}

.fr-table thead th.sortable {
    cursor: pointer;
}

